force-app/main/default/objects/Video__mdt/Video__mdt.object-meta.xml
<CustomObject>
    <label>Video</label>
    <pluralLabel>Videos</pluralLabel>
</CustomObject>