force-app/main/default/objects/Video__mdt/fields/Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Article_Id__c</fullName>
    <description>The Id of the article that is displayed in the link.</description>
    <label>Article Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>