force-app/main/default/objects/Video__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The Video title.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>