force-app/main/default/objects/Video__mdt/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>The Vidyard UUID.</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>