force-app/main/default/objects/Video__mdt/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>The Vidyard Video URL.</description>
    <label>Video URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>